tests/fixtures/valid/tuple/tuple_membership.py
# Tuple membership with in and not in operators
t: tuple[int, int, int] = (1, 2, 3)
print(2 in t)
print(5 in t)
print(2 not in t)
print(5 not in t)
