tests/fixtures/invalid/list_in_set.py
# Cannot use 'in' with List[int] and Set[int]
x: bool = [1, 2, 3] in {1, 2, 3}
